add realtime-spend-report demo and grafana board